--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,20 @@ a:hover {
 .active {
   background-color: black;
 }
+
+.photo-grid-container {
+  display: flex;
+  justify-content: center;
+}
+
+.photo-grid {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.photo-grid-item {
+  border: 1px solid #fff;
+  width: auto;
+}
